Enhance video detection and download features in BrowserFragment. Introduce download badge for detected videos, update UI elements in fragment_browser.xml, and add new string resource for video playback notification. Adjust layout padding in activity_main.xml for improved aesthetics.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="permissions_explanation">MyIDM a besoin d\'accéder au stockage pour sauvegarder vos téléchargements.</string>
     <string name="download_started">Téléchargement démarré</string>
     <string name="scanning_for_videos">Recherche de vidéos...</string>
+    <string name="video_playing">Vidéo en cours de lecture</string>
     <string name="download_completed">Téléchargement terminé</string>
     <string name="download_failed">Échec du téléchargement</string>
     <string name="download_paused">Téléchargement mis en pause</string>
